[metadata]
name = robot_sim-ksurct
version = 0.0.1
author = Caden Churchman
author_email = ccaden21@gmail.com
description = A tool to setup robot simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksurct/common-examples
project_urls =
    Bug Tracker = https://github.com/ksurct/common-examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src